# diskstore

./: .gitignore  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: api.md  index.md
scripts/: async_stuff.txt  benchmark.py  benchmark_core.py  benchmark_kv_store.py  bigfile.py  example.py  experimental_diskcache.py  stress_test.py  stress_test_diskstore_mp.py  stress_test_index.py  test_diskcache.py  utils.py
src/diskstore/: __init__.py  config.py  const.py  diskcache.py  diskread.py  diskstore.py
tests/: test_config.py  test_diskcache.py  test_diskread.py  test_diskstore.py  test_diskstore_classes.py  test_docs.py
