[project]
name = "diskstore"
version = "0.3.0"
description = "Simple MutableMapping compatible SQLite based disk storage."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tds333", email = "tds333@mailbox.org" }]
dependencies = ["apsw>=3.51.3"]

[dependency-groups]
dev = [
  "msgspec>=0.20.0",
  "pydantic>=2.12.5,<=2.99.99b0",
  "pytest",
  "pytest-asyncio>=1.3.0",
  "pytest-cov",
  "pytest-examples>=0.0.18",
  "pytest-xdist"
]
benchmark = [
  "diskcache",
  "ipython",
  "pickleDB<1",
  "pylibmc",
  "redis",
  "sqlitedict",
]
docs = [
  "mkdocstrings[python]>=1.0.3",
  "zensical>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.12.0"]
build-backend = "uv_build"

[tool.coverage.run]
parallel = true
branch = true
source = ["diskstore"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest]
# pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = [".env", ".venv", "venv"]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "PT",  # flake8-pytest
  "N",  # naming
  # "D",  # docu
  "PL",  # pylint
  "RUF",  # ruff
]
ignore = [
  # "E501", # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "RET504",
  "PLR2004",
]

[tool.uv]
exclude-newer = "1 days"
